@@ -23,4 +23,7 @@
   <records interface="plone.restapi.bbb.INavigationSchema"
            prefix="plone"
   />
+  <records interface="eea.volto.policy.interfaces.IInternalApiPathSettings"
+           prefix="eea.volto.policy.internal_api_path"
+  />
 </registry>
