@@ -103,6 +103,11 @@
     destination="8.0"
     profile="eea.volto.policy:default">
 
+    <genericsetup:upgradeDepends
+      title="Add internal API path URL replacement settings to registry"
+      import_steps="plone.app.registry"
+      />
+
     <genericsetup:upgradeStep
       title="Fix Item images"
       handler="eea.volto.policy.upgrades.attached_images.migrate_item_images"
