@@ -3,6 +3,8 @@ Changelog
 
 8.0-dev0 - (unreleased)
 -----------------------
+* Create method to update all backend:8080 to resolveuid
+  [dobri1408 - refs #290024]
 * Feature: added migration script for `item`, `teaser` and `hero`
   to new attachedimage array of object like object_browser widget
   [ichim-david refs #254622]
